--- a/package.json
+++ b/package.json
@@ -12,15 +12,11 @@
         "find-similar-packages": "bin/index.mjs"
     },
     "publishConfig": {
-        "registry": "https://registry.npmjs.org/"
+        "registry": "https://registry.npmjs.org/",
+        "access": "public"
     },
     "engines": {
         "node": "^18"
-    },
-    "scripts": {
-        "prepublishOnly": "pnpm build",
-        "build": "tsc -p tsconfig.json",
-        "release": "bumpp --commit --push --tag && pnpm publish --access public"
     },
     "keywords": [
         "cli",
@@ -44,14 +40,28 @@
         "type": "git",
         "url": "https://github.com/tjx666/find-similar-packages"
     },
-    "devDependencies": {
-        "@types/node": "^18.11.18",
-        "bumpp": "^8.2.1"
+    "eslintConfig": {
+        "extends": "@yutengjing/eslint-config-typescript"
+    },
+    "prettier": "@yutengjing/prettier-config",
+    "scripts": {
+        "prepublishOnly": "pnpm build",
+        "build": "tsc -p tsconfig.json",
+        "release": "bumpp -c \"release: v%s\" package.json && pnpm publish"
     },
     "dependencies": {
         "@pnpm/find-workspace-packages": "^5.0.16",
         "@pnpm/logger": "^5.0.0",
         "axios": "^1.2.6",
         "p-limit": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.18",
+        "@yutengjing/eslint-config-typescript": "^0.2.2",
+        "@yutengjing/prettier-config": "^0.0.1",
+        "bumpp": "^8.2.1",
+        "eslint": "^8.33.0",
+        "prettier": "^2.8.3",
+        "typescript": "5.0.0-beta"
     }
 }
