--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "registry": "https://registry.npmjs.org/",
         "access": "public"
     },
+    "packageManager": "pnpm@9.4.0",
     "engines": {
         "node": "^18"
     },
@@ -50,19 +51,19 @@
         "release": "bumpp -c \"release: v%s\" package.json && pnpm publish"
     },
     "dependencies": {
-        "@pnpm/find-workspace-packages": "^5.0.16",
+        "@pnpm/find-workspace-packages": "^6.0.9",
         "@pnpm/logger": "^5.0.0",
-        "axios": "^1.2.6",
-        "commander": "^10.0.0",
-        "p-limit": "^4.0.0"
+        "axios": "^1.7.2",
+        "commander": "^12.1.0",
+        "p-limit": "^5.0.0"
     },
     "devDependencies": {
-        "@types/node": "^18.11.18",
-        "@yutengjing/eslint-config-typescript": "^0.2.2",
-        "@yutengjing/prettier-config": "^0.0.1",
-        "bumpp": "^8.2.1",
-        "eslint": "^8.33.0",
-        "prettier": "^2.8.3",
-        "typescript": "5.0.0-beta"
+        "@types/node": "~18.19.39",
+        "@yutengjing/eslint-config-typescript": "^1.0.0",
+        "@yutengjing/prettier-config": "^1.3.0",
+        "bumpp": "^9.4.1",
+        "eslint": "^8.57.0",
+        "prettier": "^3.3.2",
+        "typescript": "5.5.2"
     }
 }
